--- a/ui/index.html
+++ b/ui/index.html
@@ -11,7 +11,7 @@
         <div class="center text-big bold">
             Hi! I'm going to design an app, HOW BAH DAT
         Hey you
-        <h3>Just made some local changes</h3>
+     <h2>This is so awesome</h2>   <h3>Just made some local changes</h3>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
