--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,2 +1,31 @@
 <html>
+    <head>
+        <title>
+            Artice One - Sanjana
+        </title>
+    </head>
+    <body>
+        <div>
+            <a href="/">Home</a>
+        </div>
+        <hr/>
+        <h2> Article One</h2>
+        <div>
+            Today's date is Febrruary 12, 2017.
+        </div>
+        <div>
+            <p>
+            This is the content for my first article.
+        This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.
+        </p>
+        <p>
+            This is the content for my first article.
+        This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.
+        </p>
+        <p>
+            This is the content for my first article.
+        This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.
+        </p>
+        </div>
+    </body>
 </html>
