[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,8 +4,19 @@
             Artice One - Sanjana
         </title>
         <meta name="viewport" content="width-device-width, initial-scale=1"/>
+        <style>
+          .first{
+              max-width: 800px;
+              margin: 0 auto;
+              color: grey;
+              font-family: sans-serif;
+          }  
+        </style>
     </head>
     <body>
+        <div class="first">
+            
+        </div>
         <div>
             <a href="/">Home</a>
         </div>
