--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -5,7 +5,7 @@
         </title>
         <meta name="viewport" content="width-device-width, initial-scale=1"/>
         <style>
-          .first{
+          .container{
               max-width: 800px;
               margin: 0 auto;
               color: grey;
@@ -14,7 +14,7 @@
         </style>
     </head>
     <body>
-        <div class="first">
+        <div class="container">
             
         </div>
         <div>
