--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -4,9 +4,21 @@
             Artice Three - Sanjana
         </title>
         <meta name="viewport" content="width-device-width, initial-scale=1"/>
+        <style>
+            .second{
+                max-width: 800px;
+    margin: 0 auto;
+    color: #4a4848;
+    font-family: sans-serif;
+    padding-top: 50px;
+    padding-left: 20px;
+    padding-right: 20px;
+            }
+        </style>
     </head>
     <body>
-        <div>
+        <div class="second">
+            <div>
             <a href="/">Home</a>
         </div>
         <hr/>
@@ -27,6 +39,7 @@
             This is the content for my first article.
         This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.
         </p>
+        </div>
         </div>
     </body>
 </html>
