[imad-console] Updates ui/article-three.html

--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -4,20 +4,10 @@
             Artice Three - Sanjana
         </title>
         <meta name="viewport" content="width-device-width, initial-scale=1"/>
-        <style>
-            .second{
-                max-width: 800px;
-    margin: 0 auto;
-    color: #4a4848;
-    font-family: sans-serif;
-    padding-top: 50px;
-    padding-left: 20px;
-    padding-right: 20px;
-            }
-        </style>
+        
     </head>
     <body>
-        <div class="second">
+        <div class="third">
             <div>
             <a href="/">Home</a>
         </div>
