[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -13,6 +13,9 @@
         Hey you
      <h2>This is so awesome</h2>   <h3>Just made some local changes</h3>
         </div>
+        <script>
+            alert('Hi,I am Javascript');
+        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
