--- a/ui/index.html
+++ b/ui/index.html
@@ -21,7 +21,9 @@
         </div>
         </div>
         <hr/>
-       
+       <div class="footer">
+           
+       </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
