--- a/ui/index.html
+++ b/ui/index.html
@@ -25,6 +25,7 @@
            This button <button id="counter"> Click me! </button> has been clicked <span id="count">0</span>times.
        </div>
        <br/>
+       <div>
        <input type="text" id="name" placeholder="name"> </input>
        <input type="submit" value="Submit"> </input>
        <ul>
@@ -33,7 +34,7 @@
              <li>name3</li>
               <li>name4</li>
        </ul>
-       
+       </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
